login to bottom right

--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -50,9 +50,9 @@
         <hr />
         <footer>
             <div class="row">
-                <div class="col-12 col-md-6">&copy; 2019 - J. Fraser</div>
-                <div class="col-12 col-md-6">
-                    @await Html.PartialAsync("_LoginPartial")
+                <div class="col-12 col-sm-6">&copy; 2019 - J. Fraser</div>
+                <div class="col-12 col-sm-6 text-sm-right">
+                        @await Html.PartialAsync("_LoginPartial")
                 </div>
             </div>
         </footer>
