--- a/SailScores.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SailScores.Web/Views/Shared/_LoginPartial.cshtml
@@ -5,24 +5,12 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <div class="navbar-nav-scroll">
-        <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">@UserManager.GetUserName(User)</a>
-                </li>
-                <li class="nav-item">
-                    <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
-                </li>
-            </ul>
-        </form>
-    </div>
-    }
-    else
-    {
-    <div class="navbar-nav-scroll">
-        <ul class="navbar-nav flex-row">
-            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
-        </ul>
-    </div>
-    }
+    <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
+        <a class="nav-link" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">@UserManager.GetUserName(User)</a>
+        <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+    </form>
+}
+else
+{
+    <a class="nav-link pt-0" asp-area="" asp-controller="Account" asp-action="Login">Log in</a>
+}
