--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -1,7 +1,23 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<h1>Sailing scoring kept simple.</h1>
+<p>
+    Sailscores is built around the idea that publishing sail race
+    scores should be simple. It should be simple enough that the
+    scores can be entered from a phone on the water. And once they've
+    got scores, competitors and clubs should be able to review scores
+    in many ways, from many devices, viewing trends and specifics.
+</p>
+
+
+Planned features include:
+<ul>
+    <li>Quick result entry, especially on mobile devices.</li>
+    <li>Integration with social media, such as automatic result posting to Twitter.</li>
+    <li>Import and Export to integrate with existing scoring software.</li>
+    <li>Support for overlapping series. (Races can be included in multiple series.)</li>
+    <li>Result trend reporting: Are your races growing?</li>
+</ul>
