--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -36,7 +36,7 @@
                 <th scope="row">@comp.SailNumber</th>
                 <th scope="row">@comp.Name</th>
                 <td>@comp.BoatName</td>
-                <td scope="row" class="text-center">@Model.Item.Results.Results[comp].TotalScore</td>
+                <td scope="row" class="text-center"><strong>@Model.Item.Results.Results[comp].TotalScore</strong></td>
 
                 @foreach (var race in Model.Item.Results.Races)
                 {
