--- a/SailScores.Web/Views/Home/Contact.cshtml
+++ b/SailScores.Web/Views/Home/Contact.cshtml
@@ -7,7 +7,7 @@
 </h2>
 
 <address>
-    James Fraser
+    James Fraser<br />
     4957 Newton Avenue South<br />
     Minneapolis, MN 55419-5253<br />
 </address>
