Club external link icon tweak

--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -13,7 +13,7 @@
 {
     <div class="row">
         <div class="col-12">
-            <p><a href="@Model.Url" target="_blank">Club Web Site <span class="fas fa-external-link-alt"></span></a></p>
+            <p><a href="@Model.Url" target="_blank"><span class="fas fa-external-link-alt"></span> Club Web Site</a></p>
         </div>
     </div>
 }
