--- a/SailScores.Web/Views/Race/Index.cshtml
+++ b/SailScores.Web/Views/Race/Index.cshtml
@@ -8,6 +8,24 @@
     Layout = "_ClubLayout";
 }
 
+@section Sidebar {
+<nav class="col-md-2 d-none d-md-block bg-light sidebar">
+    <div class="sidebar-sticky">
+        <ul class="nav flex-column">
+            @foreach (var item in Model.List.GroupBy(s => s.Season?.Name ?? String.Empty, s => s))
+            {
+                <li class="nav-item">
+                    <a class="nav-link active" href="#@item.Key">
+                        @item.Key
+                    </a>
+                </li>
+            }
+            
+        </ul>
+    </div>
+</nav>
+}
+
 <h2>@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant() Races</h2>
 
 <table class="table">
@@ -55,5 +73,5 @@
                 </tr>
             }
         }
-        </tbody>
+    </tbody>
 </table>
