WIP: Admin page

--- a/SailScores.Web/wwwroot/css/custom.css
+++ b/SailScores.Web/wwwroot/css/custom.css
@@ -6920,3 +6920,6 @@ a.text-dark:hover, a.text-dark:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6; } }
+
+.table-nonfluid {
+  width: auto; }
