--- a/SailScores.Web/wwwroot/css/custom.css
+++ b/SailScores.Web/wwwroot/css/custom.css
@@ -6921,5 +6921,5 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 
-.table-nonfluid {
+.table-not-wide {
   width: auto; }
