--- a/SailScores.Web/Views/Admin/_FleetList.cshtml
+++ b/SailScores.Web/Views/Admin/_FleetList.cshtml
@@ -3,6 +3,11 @@
 
 <h3 id="fleets">Fleets</h3>
 <p>
+    Fleets are used to group boats that will be scored together. A race will only
+    include boats from a single fleet. But competitors can belong to
+    multiple fleets.
+</p>
+<p>
     @Html.ActionLink("Create", "Create", "Fleet", new { /* id=item.PrimaryKey */ })
 </p>
 <table class="table table-not-wide">
