--- a/SailScores.Web/Views/BoatClass/Delete.cshtml
+++ b/SailScores.Web/Views/BoatClass/Delete.cshtml
@@ -26,6 +26,8 @@
     </dl>
     
     <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="ClubId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
     </form>
