--- a/SailScores.Web/Views/Admin/Edit.cshtml
+++ b/SailScores.Web/Views/Admin/Edit.cshtml
@@ -42,7 +42,8 @@
     </nav>
 }
 
-<h2>Edit @Model.Name</h2>
+<h2>@Model.Name</h2>
+<h3>Administrator View</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
