--- a/SailScores.Web/Views/Admin/_BoatClassList.cshtml
+++ b/SailScores.Web/Views/Admin/_BoatClassList.cshtml
@@ -2,7 +2,7 @@
 
     <h3 id="classes">Classes</h3>
 <p>
-    Classes refer to the type of boat sailed. A competitor can only belong to one class.
+    Class refers to the type of boat. A competitor can only belong to one class.
 </p>
     <p>
         @Html.ActionLink("Create", "Create", "BoatClass", new { /* id=item.PrimaryKey */ })
