--- a/SailScores.Web/Views/Admin/_FleetList.cshtml
+++ b/SailScores.Web/Views/Admin/_FleetList.cshtml
@@ -3,8 +3,8 @@
 
 <h3 id="fleets">Fleets</h3>
 <p>
-    Fleets are used to group boats that will be scored together. A race will only
-    include boats from a single fleet. But competitors can belong to
+    Fleets group boats that should be scored against each other. A race only
+    includes boats from a single fleet. But competitors can belong to
     multiple fleets.
 </p>
 <p>
