--- a/SailScores.Web/Views/Fleet/Create.cshtml
+++ b/SailScores.Web/Views/Fleet/Create.cshtml
@@ -72,7 +72,9 @@
 </script>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Admin"
+       asp-action="Edit"
+       asp-fragment="fleets">Back to List</a>
 </div>
 
 @section Scripts {
