--- a/SailScores.Web/Views/Series/Create.cshtml
+++ b/SailScores.Web/Views/Series/Create.cshtml
@@ -44,7 +44,9 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Admin"
+       asp-action="Edit"
+       asp-fragment="series">Back to List</a>
 </div>
 
 @section Scripts {
