--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -46,7 +46,9 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Admin"
+       asp-action="Edit"
+       asp-fragment="series">Cancel</a>
 </div>
 
 @section Scripts {
