--- a/SailScores.Web/Views/Competitor/Edit.cshtml
+++ b/SailScores.Web/Views/Competitor/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SailScores.Core.Model.Competitor
+﻿@model SailScores.Web.Models.SailScores.CompetitorWithOptionsViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -41,8 +41,16 @@
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BoatClassId" class="control-label"></label>
-                <input asp-for="BoatClassId" class="form-control" />
+                <label asp-for="BoatClassId" class="control-label">Class</label>
+                <select asp-for="BoatClassId" class="form-control">
+                    <option selected="selected">Select a class...</option>
+                    @foreach (var boatclass in Model.BoatClassOptions)
+                    {
+                        <option value="@boatclass.Id">
+                            @boatclass.Name
+                        </option>
+                    }
+                </select>
                 <span asp-validation-for="BoatClassId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -53,7 +61,9 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Admin"
+       asp-action="Edit"
+       asp-fragment="competitors">Back to List</a>
 </div>
 
 @section Scripts {
