--- a/SailScores.Web/Views/Season/Edit.cshtml
+++ b/SailScores.Web/Views/Season/Edit.cshtml
@@ -38,7 +38,9 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Admin"
+       asp-action="Edit"
+       asp-fragment="seasons">Back to List</a>
 </div>
 
 @section Scripts {
