--- a/SailScores.Web/Views/Series/Delete.cshtml
+++ b/SailScores.Web/Views/Series/Delete.cshtml
@@ -30,6 +30,8 @@
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-controller="Admin"
+           asp-action="Edit"
+           asp-fragment="series">Cancel</a>
     </form>
 </div>
