--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -74,17 +74,15 @@
 
 
 
-<script src="/scripts/raceEditor.js"></script>
+<script src="~/js/raceEditor.build.js"></script>
 
-    <div id="message"></div>
-    <div>
-        Compiler: <input id="compiler" value="TypeScript" onblur="loadCompetitors()" /><br />
-        Framework: <input id="framework" value="ASP.NET" onkeyup="sayHello()" />
-    </div>
+<div id="message"></div>
+<div>
+    Compiler: <input id="compiler" value="TypeScript" onblur="window.SailScores.loadCompetitors()" /><br />
+    Framework: <input id="framework" value="ASP.NET" onkeyup="sayHello()" />
+</div>
 ts list:
-<ul id="compList">
-
-</ul>
+<ul id="compList"></ul>
 
 <hr />
 <ul>
