wip: Webpack TS

--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -79,7 +79,7 @@
 <div id="message"></div>
 <div>
     Compiler: <input id="compiler" value="TypeScript" onblur="window.SailScores.loadCompetitors()" /><br />
-    Framework: <input id="framework" value="ASP.NET" onkeyup="sayHello()" />
+    Framework: <input id="framework" value="ASP.NET" onkeyup="window.SailScores.send()" />
 </div>
 ts list:
 <ul id="compList"></ul>
