--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="col-md-6 order-md-first order-last">
         <h4>Planned features</h4>
         <ul>
-            <li>Quick result entry, especially on mobile devices.</>
+            <li>Quick result entry, especially on mobile devices.</li>
             <li>Integration with social media, such as automatic result posting to Twitter.</li>
             <li>Import and Export to integrate with existing scoring software.</li>
             <li>Support for overlapping series. (Races can be included in multiple series.)</li>
